--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         margin-right: 1px;
       }
 
-      /* audio {
+      audio {
         display: none;
-      } */
+      } 
 
       .audio-item {
-        /* display: flex; */
+        display: flex;
         align-items: center;
         justify-content: center;
         gap: 4px;
@@ -76,7 +76,7 @@
     <div class="audio-container">
       <div class="audio-item">
         <audio controls="">
-          <source src="/audio.mp3" type="audio/mpeg" />
+          <source src="./audio.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
         <div class="audio-button">
@@ -142,7 +142,7 @@
     <div class="audio-container">
       <div class="audio-item">
         <audio controls="">
-          <source src="/audio.mp3" type="audio/mpeg" />
+          <source src="./audio.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
         <div class="audio-button">
